--- a/arability/app/views/games/_vote.html.erb
+++ b/arability/app/views/games/_vote.html.erb
@@ -80,6 +80,9 @@
 			<td style="width:230px; text-align:center;">
 				<button class="btn btn-primary"  id="skip_button" type="submit" onclick="skip_keyword()"><%= t(:skip_this_keyword) %></button>
 			</td>
+			<td style="width:230px; text-align:center;">
+				<a href="#report_modal" role="button" class="btn btn-primary" onClick="modalToggle()" id="launch_report"><%= t(:report) %></a>
+			</td>
 		</tr>
 	</table>
 </div>
@@ -120,4 +123,105 @@
 		var synonym_id = $("#choosen_synonym_id").val();
 		record_vote(synonym_id,"slang");
 	}
+
+	function modalToggle(){
+  $("#report_modal").modal("toggle");
+}
+function setChecked(chkbox){
+  $chkbox = $(chkbox)
+  if($chkbox.attr("is_checked") == "true")
+    $chkbox.attr("is_checked", false);
+  else
+    $chkbox.attr("is_checked", true);
+}
+function report_submission(){
+  $reported_keywords = $("#report_modal").find("[is_checked=true]");
+  if($reported_keywords.length == 0)
+    return;
+  words = new Array();
+  $.each($reported_keywords, function(index, element){
+    words.push($(element).attr("value"));
+  });
+  var request = $.post("<%= send_report_path %>", { reported_words: words });
+  $.each($("input#chkbox"), function(index, element){
+    $(element).attr("checked", false);
+    $(element).attr("is_checked", false);
+  });
+
+  request.done(function (_, _, _){
+    restoreError();
+    showFlash();
+  });
+
+  request.fail(function (_, _, _){
+    showError();
+  });
+}
+
+function showFlash(){
+  $("#report_success").css("display", "block");
+  $("#report_success").css("margin-bottom", "2px");
+  $("#report_success").css("padding-top", "6px");
+  $("#report_success").css("padding-bottom", "6px");
+  $("#report_success").css("padding-right", "12px");
+  $("#report_success").css("padding-left", "12px");
+  $("#report_success").css("position", "fixed");
+  $("#report_success").css("top", "100px");
+  $("#report_success").css("left", "42%");
+  $("#report_success").css("right", "42%");
+  $("#report_success").fadeOut(5000);
+}
+
+function showError(){
+  $("#report_failure").css("display", "block");
+  $("#report_failure").css("margin-bottom", "2px");
+  $("#report_failure").css("position", "fixed");
+  $("#report_failure").css("top", "50px");
+  $("#report_failure").css("left", "10%");
+  $("#report_failure").css("right", "10%");
+}
+
+function restoreError(){
+  $("#report_failure").css("display", "none");
+}
 </script>
+<div class="alert alert-success" id="report_success" style="display:none; font-size: 16px;">
+			<div style="text-align:center;"><%= t(:report_sent_success) %></div>
+		</div>
+		<div class="alert alert-block alert-error" id="report_failure" style="display:none; font-size: 16px;">
+		  <button type="button" class="close" onclick="restoreError()">×</button>
+		  <h4 class="alert-heading"><%= t(:oh_snap) %></h4>
+		  <p><%= t(:check_connection) %></p>
+	  </div>
+	  <script type="text/javascript">
+			<% if I18n.locale == :ar %>
+				$("#launch_report").css("font-size","18px");
+			<% else %>
+				$("#launch_report").css("font-size","13px");
+			<% end %>
+		</script>
+<div id="report_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="font-size: 16px;">
+			<div class="modal-header">
+			  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			  <h3 id="modal_label"><%= t(:report_abusive) %></h3>
+			</div>
+			<div class="modal-body">
+			  <p><%= t(:help_us_through_reporting) %></p>
+			  <hr>
+			  <h4><%= t(:words_in_page)%></h4>
+			  <%= check_box_tag "chkbox", [@keyword.id, "Keyword"], false, onclick: "setChecked(this)", is_checked: false %>
+			  <%= @keyword.name %>
+			  <br>
+			  <% if !@synonym_list.blank? %>
+			  	<% @synonym_list.each do |synonym| %>
+			  	<%= check_box_tag "chkbox", [synonym.id, "Synonym"], false, onclick: "setChecked(this)", is_checked: false %>
+			  	<%= synonym.name %>
+			  	<br>
+			  	<% end %>
+			  <% end %>
+			</div>
+			<div class="modal-footer">
+			  <button class="btn" data-dismiss="modal"><%= t(:close) %></button>
+			  <button class="btn btn-primary" onclick="report_submission()" data-dismiss="modal"><%= t(:submit) %></button>
+			</div>
+		</div>
