Removed bootstrap file and incresed font size in buttons in arabic

--- a/arability/app/assets/stylesheets/bootstrap-rtl-overrides.css.scss
+++ b/arability/app/assets/stylesheets/bootstrap-rtl-overrides.css.scss
@@ -4,6 +4,9 @@
 .form-search .input-append .search-query {
     border-radius: 0 14px 14px 0;
 }
+.btn {
+  font-size: 18px;
+}
 [class^="icon-"],
 [class*=" icon-"] {
   display: inline-block;
