integration with omar

--- a/arability/app/views/admin/_sidebar-nav.html.erb
+++ b/arability/app/views/admin/_sidebar-nav.html.erb
@@ -23,6 +23,9 @@
 			<li <%= active == "view-categories"? "class=active" : "" %>>
 				<a href="/admin/view_categories">عرض الفئات</a>
 			</li>
+			<li <%= active == "view-subscription-models"? "class=active" : "" %>>
+				<a href="/admin/view_subscription_models">عرض انظمة الاشتراك</a>
+			</li>
 			<li class="nav-header">إدارة الكلمات</li>
 			<li class="divider"></li>
 			<li <%= active == "add-word"? "class=active" : "" %>>
