[Issue #195][updating] restored a div class

--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -74,7 +74,7 @@
 							</button>
 							<span>&nbsp;<%= t(:filter) %></span>
 						</div>
-						<div id="filter" class="collapse in"> 
+						<div id="filter" class="collapse"> 
 							<div style="padding:10px;">
 								<div class="control-group">
 									<%= label_tag t(:country), nil, :class => "control-label", style: "width:80px;" %>
