[bootstrap] updated btn-mini size to 16px

--- a/arability/app/assets/stylesheets/bootstrap-rtl-overrides.css.scss
+++ b/arability/app/assets/stylesheets/bootstrap-rtl-overrides.css.scss
@@ -220,6 +220,6 @@ background-position: -96px -96px;
 .icon-briefcase               { background-position: -432px -144px; }
 .icon-fullscreen              { background-position: -456px -144px; }
 
-.btn {
+.btn-mini {
   font-size: 16px;
 }
