--- a/arability/app/views/admin/edit_subscription_model.html.erb
+++ b/arability/app/views/admin/edit_subscription_model.html.erb
@@ -20,13 +20,13 @@
                 </div>
               <% end %>
               <div class="control-group">
-                <%= f.label :الإسم العربي, :class => "control-label" %>
+                <%= f.label :الإسم_العربي, :class => "control-label" %>
                 <div class="controls">
                   <%= f.text_field :name_ar, :placeholder => "الإسم العربي" %>
                 </div>
               </div>
               <div class="control-group">
-                <%= f.label :الإسم الإنجليزي, :class => "control-label" %>
+                <%= f.label :الإسم_الإنجليزي, :class => "control-label" %>
                 <div class="controls">
                   <%= f.text_field :name_en, :placeholder => "English name" %>
                 </div>
