--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -111,8 +111,7 @@
                 <%= collection_select(:synonym_name , :text, [], :id, :name, {prompt: t(:enter_word_first) }, {:class=>'input_synonym', name: 'select_menu', id: 'selected_synonym', disabled: true, style:'width:70%; margin-top:10px;'}) %>
               </td> 
               <td style="text-align:center">
-                <input class="btn btn-primary" id="add_button" type="submit" style="font-size:15px; text-align:center; margin-top:10px;" onclick="add_keyword_with_synonym()" value="<%= t(:add_to_project) %>" disabled=
-                "true"></input>
+                <%= link_to t(:add_to_project), {action:"add_word_inside_project", controller:"projects", project_id: @project.id, keyword:"download", synonym_id:395},{style:"font-size:15px; text-align:center; margin-top:10px;", onclick:"compute_and_click()", class:"btn btn-primary", id:"add_button",disabled:"true", type:"submit" } %>
              </td>
             </tr>
       </table>
@@ -120,9 +119,15 @@
     </div>
   </form> 
 <script type="text/javascript" charset="utf-8">
+  $(".input").change(function(){
+      var new_synonym_id = $(this).val();
+      $.post("/developers/projects/"+"<%= @project.id %>"+"/change_synonym", { synonym_id: new_synonym_id, keyword: "download",project_id: "<%= @project.id %>" });
+    });
+  
   $("#selected_keyword").change(function (){
     load_synonyms();
   });
+  
   $(".autocomplete").typeahead({
     source: fetch_keywords,
     items: 10,
@@ -137,6 +142,7 @@
      return item
     }
   });
+  
   function fetch_keywords(keyword, callback){
     $.post("autocomplete_keyword", { keyword_search: keyword, project_id: <%= @project.id %> }, function(data){
       length = data[Object.keys(data).length-1];
@@ -154,23 +160,25 @@
       callback(data);
     })
   }
-  $(".input").change(function(){
-    var new_synonym_id = $(this).val();
-      $.post("/developers/projects/"+"<%= @project.id %>"+"/change_synonym", { synonym_id: new_synonym_id, keyword: "download",project_id: "<%= @project.id %>" });
-  });
-  function add_keyword_with_synonym(){
-    var keyword_name = $("#selected_keyword").val();
-    var synonym_id = $("#selected_synonym option:selected").val();
-    if(keyword_name != "" && synonym_id != undefined && synonym_id !="0"){
-        $.ajax({
-          type: "POST",
-          url: "/developers/projects/"+"<%= @project.id %>"+"/quick_add",
-          data: {synonym_id: synonym_id, keyword:keyword_name ,project_id: "<%= @project.id %>" }
-        });   
-      }
-  }
+
   function load_synonyms(){
     var keyword = $("#selected_keyword").val();
     $.post("/developers/projects/load_synonyms",{word:keyword, project_id: "<%= @project.id %>"} );
+  }
+  
+  function compute_and_click(){
+    var keyword_name = $("#selected_keyword").val();
+    var synonym_id = $("#selected_synonym option:selected").val();
+    var keyword_in_params = "keyword="+keyword_name;
+    var locale_in_params = "&locale="+"<%= I18n.locale %>"
+    var synonym_id_in_params = "&synonym_id="+synonym_id
+    var url = "/developers/projects/"+"<%= @project.id %>"+"/add_word_inside_project?"
+    var complete_url = url + keyword_in_params + locale_in_params + synonym_id_in_params
+    if($("#add_button").attr("disabled") == "disabled" ){
+      return;
+    }
+    else{
+      $('#add_button').attr('href',complete_url);
+    }
   }
 </script>
