--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -39,7 +39,7 @@
                     <img src="/assets/facebook-lgn.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
                   </a>
                   <a href="/auth/twitter" style="width:50px; padding:0px;margin:0px; display:inline-block;">
-                    <img src="/assets/twitter-lgn.jpg" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
+                    <img src="/assets/twitter-lgn.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
                   </a>
                   <a href="#" style="width:50px; padding:0px;margin:0px; display:inline-block;">
                     <img src="/assets/google_64.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
